--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,19 +11,19 @@
       <androidx.fragment.app.FragmentContainerView
           android:id="@+id/fragmentContainerView"
           android:name="androidx.navigation.fragment.NavHostFragment"
-          android:layout_width="0dp"
-          android:layout_height="0dp"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
           app:defaultNavHost="true"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
-          />
+          tools:layout="@layout/fragment_home" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav_bar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/pink_200"
+            android:background="@color/pink_500"
             app:labelVisibilityMode="selected"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
