--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/homeFragment"
+        android:icon="@drawable/nav_menu_ic_home"
+        android:title="@string/title_home_str"/>
+
+    <item
+        android:id="@+id/favoritesFragment"
+        android:icon="@drawable/nav_menu_ic_favorites"
+        android:title="@string/title_favorites_str" />
+
 </menu>
