--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,14 @@
       <androidx.fragment.app.FragmentContainerView
           android:id="@+id/fragmentContainerView"
           android:name="androidx.navigation.fragment.NavHostFragment"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
+          android:layout_width="0dp"
+          android:layout_height="0dp"
           app:defaultNavHost="true"
+          app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
+          app:navGraph="@navigation/nav_graph"
           tools:layout="@layout/fragment_home" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
