--- a/app/src/main/res/layout/item_tv.xml
+++ b/app/src/main/res/layout/item_tv.xml
@@ -5,28 +5,29 @@
 
     <data>
 
+        <import type="com.example.tmdb.util.ExtensionsKt" />
+
         <import type="com.example.tmdb.util.ImageQuality" />
 
         <import type="com.example.tmdb.util.MediaType" />
 
         <variable
-            name="person"
-            type="com.example.tmdb.domain.model.Person" />
+            name="tv"
+            type="com.example.tmdb.domain.model.Tv" />
 
         <variable
             name="isGrid"
             type="Boolean" />
 
         <variable
-            name="isCast"
+            name="isCredits"
             type="Boolean" />
-
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        detailId="@{person.id}"
-        detailImageUrl="@{person.profilePath}"
-        detailMediaType="@{MediaType.PERSON}"
+        detailId="@{tv.id}"
+        detailImageUrl="@{tv.posterPath}"
+        detailMediaType="@{MediaType.TV}"
         android:layout_width="@{isGrid ? @dimen/grid_list_item_width : @dimen/portrait_image_width, default = @dimen/portrait_image_width}"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/recyclerview_item_end_margin"
@@ -43,13 +44,13 @@
             app:cardElevation="@dimen/card_elevation">
 
             <ImageView
-                imageMediaType="@{MediaType.PERSON}"
+                imageMediaType="@{MediaType.TV}"
                 imageQuality="@{ImageQuality.LOW}"
-                imageUrl="@{person.profilePath}"
+                imageUrl="@{tv.posterPath}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                tools:srcCompat="@drawable/ic_baseline_person_24" />
+                tools:srcCompat="@drawable/ic_baseline_live_tv_24" />
 
         </androidx.cardview.widget.CardView>
 
@@ -59,18 +60,35 @@
             android:layout_marginTop="2dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@{person.name}"
+            android:text="@{tv.name}"
+            android:textSize="16sp"
             android:textStyle="bold"
-            tools:text="Name Surname" />
+            tools:text="Tv Title" />
 
-        <TextView
-            isVisible="@{!person.character.empty || !person.knownForDepartment.empty}"
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-light"
-            android:text="@{isCast ? person.character : person.knownForDepartment}"
-            tools:text="Character / Job" />
+            android:layout_height="wrap_content">
 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-light"
+                android:maxLength="@{isCredits ? Integer.MAX_VALUE : 4}"
+                android:text="@{isCredits ? (tv.character == null ? tv.job : tv.character) : tv.firstAirDate}"
+                tools:text="2022" />
+
+            <TextView
+                coloredRating="@{ExtensionsKt.round(tv.voteAverage)}"
+                isVisible="@{!isCredits}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/textview_drawable_padding"
+                android:fontFamily="sans-serif-light"
+                app:drawableStartCompat="@drawable/ic_baseline_star_rate_18"
+                tools:text="0.0" />
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.LinearLayoutCompat>
-
 </layout>
