--- a/app/src/main/res/layout/activity_tv_details.xml
+++ b/app/src/main/res/layout/activity_tv_details.xml
@@ -1,9 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.tvdetails.TvDetailsActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+
+        <import type="com.example.tmdb.util.ExtensionsKt" />
+
+        <import type="com.example.tmdb.util.ExternalPlatform" />
+
+        <import type="com.example.tmdb.util.ImageQuality" />
+
+        <import type="com.example.tmdb.util.IntentType" />
+
+        <import type="com.example.tmdb.util.MediaType" />
+
+        <variable
+            name="activity"
+            type="com.example.tmdb.ui.tvdetails.TvDetailsActivity" />
+
+        <variable
+            name="viewModel"
+            type="com.example.tmdb.ui.tvdetails.TvDetailsViewModel" />
+
+        <variable
+            name="season"
+            type="com.example.tmdb.domain.model.Season" />
+
+    </data>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@{activity.backgroundColor}"
+        android:orientation="vertical">
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/appBarLayout"
+            backgroundColor="@{activity.backgroundColor}"
+            collapsingToolbar="@{collapsingToolbarLayout}"
+            frameLayout="@{frameLayout}"
+            toolbarTitle="@{viewModel.details.name}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@{activity.backgroundColor}"
+            android:fitsSystemWindows="true">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbarLayout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/detail_poster_height"
+                app:contentScrim="@{activity.backgroundColor}"
+                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
+                app:titleCollapseMode="scale"
+                app:toolbarId="@id/toolbar">
+
+                <FrameLayout
+                    android:id="@+id/frameLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    app:layout_collapseMode="parallax">
+
+                    <ImageView
+                        centerCrop="@{true}"
+                        imageMediaType="@{MediaType.TV}"
+                        imageQuality="@{ImageQuality.HIGH}"
+                        imageUrl="@{viewModel.details.posterPath}"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        tools:src="@drawable/ic_baseline_live_tv_24" />
+
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        style="@style/BriefDetailParent"
+                        transparentBackground="@{activity.backgroundColor}">
+
+                        <TextView
+                            style="@style/BriefDetailTitle"
+                            android:text="@{viewModel.details.name}"
+                            tools:text="Tv Title" />
+
+                        <LinearLayout
+                            isVisible="@{!viewModel.details.firstAirDate.empty || !viewModel.details.episodeRunTime.empty}"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="6dp">
+
+                            <TextView
+                                style="@style/BriefDetailBody"
+                                android:text="@{viewModel.details.getAiringDates()}"
+                                tools:text="2022" />
+
+                            <TextView
+                                style="@style/BriefDetailBody"
+                                isVisible="@{!viewModel.details.firstAirDate.empty &amp;&amp; !viewModel.details.episodeRunTime.empty}"
+                                android:layout_marginStart="6dp"
+                                android:layout_marginEnd="6dp"
+                                android:text="@string/bullet_point" />
+
+                            <TextView
+                                style="@style/BriefDetailBody"
+                                android:text="@{ExtensionsKt.formatTime(viewModel.details.episodeRunTime[0], context)}"
+                                tools:text="0hr 0min" />
+
+                        </LinearLayout>
+
+                        <TextView
+                            style="@style/BriefDetailBody"
+                            android:drawablePadding="@dimen/textview_drawable_padding"
+                            android:text="@{ExtensionsKt.round(viewModel.details.voteAverage) + @string/item_count_s(ExtensionsKt.thousandsSeparator(viewModel.details.voteCount,context))}"
+                            app:drawableStartCompat="@drawable/ic_baseline_star_rate_18"
+                            tools:text="0.0 (0)" />
+
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                </FrameLayout>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</layout>
