--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Loading">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -54,6 +55,91 @@
         <item name="android:layout_marginBottom">1dp</item>
         <item name="layout_constraintBottom_toBottomOf">parent</item>
         <item name="layout_constraintTop_toTopOf">parent</item>
+    </style>
+
+    <style name="BriefDetailParent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">bottom</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:paddingStart">@dimen/start_margin</item>
+        <item name="android:paddingTop">@dimen/top_margin_small</item>
+        <item name="android:paddingEnd">@dimen/end_margin</item>
+        <item name="android:paddingBottom">@dimen/bottom_margin_small</item>
+    </style>
+
+    <style name="BriefDetailBody">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textSize">@dimen/detail_brief_text_size</item>
+    </style>
+
+    <style name="BriefDetailTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">6dp</item>
+        <item name="android:textSize">@dimen/detail_title_text_size</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="DetailsTitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/start_margin</item>
+        <item name="android:layout_marginEnd">@dimen/end_margin</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="DetailsBody">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/start_margin</item>
+        <item name="android:layout_marginEnd">@dimen/end_margin</item>
+        <item name="android:layout_marginBottom">@dimen/bottom_margin</item>
+        <item name="fontFamily">sans-serif-light</item>
+    </style>
+
+    <style name="Externals">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginEnd">12dp</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="ExternalsParent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/start_margin</item>
+        <item name="android:layout_marginTop">@dimen/top_margin_small</item>
+        <item name="android:layout_marginEnd">@dimen/end_margin</item>
+        <item name="android:layout_marginBottom">@dimen/bottom_margin_large</item>
+    </style>
+
+    <style name="ExpandableLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="el_duration">600</item>
+        <item name="layout_constraintBottom_toBottomOf">parent</item>
+        <item name="layout_constraintStart_toStartOf">parent</item>
+        <item name="layout_constraintTop_toTopOf">parent</item>
+    </style>
+
+    <style name="BackButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">?selectableItemBackgroundBorderless</item>
+        <item name="android:src">?attr/homeAsUpIndicator</item>
+    </style>
+
+    <style name="BackButtonParent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/start_margin</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginBottom">@dimen/bottom_margin</item>
+        <item name="android:fitsSystemWindows">true</item>
     </style>
 
     <style name="DetailLightTheme" parent="Theme.Material3.Light.NoActionBar">
