--- a/app/src/main/res/layout/activity_see_all.xml
+++ b/app/src/main/res/layout/activity_see_all.xml
@@ -27,12 +27,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 activity="@{activity}"
                 backArrowTint="@{activity.backgroundColor}"
                 seeAllTitle="@{activity.title}"
                 titleTextColor="@{activity.backgroundColor}"
+                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                 tools:title="See All"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
