--- a/app/src/main/res/layout/fragment_favorite_movies.xml
+++ b/app/src/main/res/layout/fragment_favorite_movies.xml
@@ -40,6 +40,7 @@
             android:scrollbarStyle="outsideOverlay"
             android:scrollbars="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_favorite_movie"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
