Update gradle and start profile page

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,4 +11,9 @@
         android:icon="@drawable/nav_menu_ic_favorites"
         android:title="@string/title_favorites_str" />
 
+    <item
+        android:id="@+id/profileFragment"
+        android:icon="@drawable/nav_menu_ic_profiles"
+        android:title="@string/profile"
+        />
 </menu>
