--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,4 +17,10 @@
         android:label="fragment_favorites"
         tools:layout="@layout/fragment_favorites" />
 
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.example.tmdb.ui.profile.ProfileFragment"
+        android:label="fragment_profiles"
+        tools:layout="@layout/fragment_profile" />
+
 </navigation>
