--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,12 +11,16 @@
             name="fragment"
             type="com.example.tmdb.ui.profile.ProfileFragment" />
 
+        <variable
+            name="viewModel"
+            type="com.example.tmdb.ui.profile.ProfileViewModel" />
     </data>
+
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="ui.profile.ProfileFragment">
+        tools:context="com.example.tmdb.ui.profile.ProfileFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/profile"
+                android:text="Profile"
                 android:textColor="?attr/colorPrimary"
                 android:textSize="30sp"
                 android:textStyle="bold" />
@@ -47,10 +51,14 @@
                     android:orientation="vertical"
                     android:padding="15dp">
 
-                    <com.google.android.material.imageview.ShapeableImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_width="150dp"
                         android:layout_height="150dp"
-                        android:layout_gravity="center" />
+                        android:layout_gravity="center"
+                        android:src="@drawable/komi"
+                        app:civ_border_color="@color/pink_1000"
+                        app:civ_border_width="2dp"
+                        tools:src="@drawable/komi" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -62,12 +70,11 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Nama Orang Disini"
+                            android:text="yourfavoritekaisr"
                             android:textAlignment="center"
                             android:textColor="?attr/colorPrimaryDark"
                             android:textSize="20sp"
                             android:textStyle="bold" />
-
                     </LinearLayout>
                 </LinearLayout>
 
@@ -95,7 +102,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
-                            android:text="@string/about"
+                            android:text="About"
                             android:textColor="?attr/colorPrimary"
                             android:textSize="20sp"
                             android:textStyle="bold" />
@@ -105,7 +112,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
                             android:layout_marginTop="30dp"
-                            android:text="@string/bio"
+                            android:text="THe bigger they are the larger they fall"
                             android:textColor="@color/pink_500"
                             android:textSize="15sp" />
                     </RelativeLayout>
@@ -136,7 +143,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
-                            android:text="@string/user_information"
+                            android:text="User Information"
                             android:textColor="@color/pink_1000"
                             android:textSize="15sp"
                             android:textStyle="bold" />
@@ -154,7 +161,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
-                            android:text="@string/username"
+                            android:text="Username"
                             android:textColor="@color/pink_700"
                             android:textSize="15sp"
                             android:textStyle="bold" />
@@ -180,7 +187,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
-                            android:text="@string/gender"
+                            android:text="Include Adult"
                             android:textColor="@color/pink_700"
                             android:textSize="15sp"
                             android:textStyle="bold" />
@@ -189,7 +196,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
-                            android:text="@string/male"
+                            android:text="Yes"
                             android:textColor="?attr/colorPrimary"
                             android:textSize="15sp"
                             android:textStyle="bold" />
@@ -206,7 +213,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
-                            android:text="@string/age"
+                            android:text="Language"
                             android:textColor="@color/pink_700"
                             android:textSize="15sp"
                             android:textStyle="bold" />
@@ -215,7 +222,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
-                            android:text="@string/_21"
+                            android:text="English"
                             android:textColor="?attr/colorPrimary"
                             android:textSize="15sp"
                             android:textStyle="bold" />
@@ -232,7 +239,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
-                            android:text="@string/mobile"
+                            android:text="Country"
                             android:textColor="@color/pink_700"
                             android:textSize="15sp"
                             android:textStyle="bold" />
@@ -241,11 +248,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
-                            android:text="@string/mobile_value"
+                            android:text="Indonesia"
                             android:textColor="?attr/colorPrimary"
                             android:textSize="15sp"
                             android:textStyle="bold" />
-
                     </RelativeLayout>
 
                     <RelativeLayout
@@ -259,7 +265,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
-                            android:text="@string/email"
+                            android:text="Email"
                             android:textColor="@color/pink_700"
                             android:textSize="15sp"
                             android:textStyle="bold" />
@@ -268,7 +274,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
-                            android:text="@string/email_value"
+                            android:text="arcotheskull@gmail.com"
                             android:textColor="?attr/colorPrimary"
                             android:textSize="15sp"
                             android:textStyle="bold" />
@@ -276,67 +282,6 @@
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
-
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="30dp"
-                app:cardCornerRadius="10dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="15dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentStart="true"
-                            android:text="@string/social_media"
-                            android:textColor="@color/black"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-                    </RelativeLayout>
-
-                    <GridLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:columnCount="3"
-                        android:rowCount="1"
-                        android:useDefaultMargins="true">
-
-                        <androidx.appcompat.widget.AppCompatImageView
-                            style="@style/Externals"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:src="@drawable/ic_facebook_36" />
-
-                        <androidx.appcompat.widget.AppCompatImageView
-                            style="@style/Externals"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:src="@drawable/ic_instagram_36" />
-
-                        <androidx.appcompat.widget.AppCompatImageView
-                            style="@style/Externals"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:src="@drawable/ic_twitter_36" />
-
-
-                    </GridLayout>
-                </LinearLayout>
-
-            </com.google.android.material.card.MaterialCardView>
-
 
         </LinearLayout>
 
